redesing the template

--- a/src/_zeus/assets/sass/layout/header/_header-sidebar-light.scss
+++ b/src/_zeus/assets/sass/layout/header/_header-sidebar-light.scss
@@ -24,7 +24,7 @@
                         $icon-color: var(--#{$prefix}primary), 
                         $bullet-color: var(--#{$prefix}primary), 
                         $arrow-color: var(--#{$prefix}primary), 
-                        $bg-color: var(--#{$prefix}gray-100),
+                        $bg-color: var(--#{$prefix}primary-clarity),
                         $all-links: false
                     );
                 }
