refactor: Update header height and sidebar width
Adjust the header height from 94px to 40px in the _variables.custom.scss file. Also, update the sidebar width from 265px to 250px in the same file. These changes were made to improve the layout and make it more compact.

Refactor the sidebar toggle button styling

In the _sidebar.scss file, modify the box-shadow and background-color properties of the .app-sidebar-toggle class to improve the styling of the sidebar toggle button. This change affects the desktop mode layout.

Update the app-sidebar-logo height

In the HeaderWrapper.tsx file, change the height of the app-sidebar-logo class from 94px to 40px. This adjustment ensures consistency with the updated header height.

Remove unused code in Navbar.tsx

In the Navbar.tsx file, remove the import statement for the HeaderNotificationsMenu component, as it is no longer used in the codebase.

--- a/src/_zeus/assets/sass/layout/sidebar/_sidebar.scss
+++ b/src/_zeus/assets/sass/layout/sidebar/_sidebar.scss
@@ -5,13 +5,13 @@
 // Desktop mode
 @include media-breakpoint-up(lg) {
     .app-sidebar-toggle {
-        box-shadow: var(--#{$prefix}app-sidebar-base-toggle-btn-box-shadow) !important; 
-        background-color: var(--#{$prefix}app-sidebar-base-toggle-btn-bg-color) !important; 
+        box-shadow: var(--#{$prefix}app-sidebar-base-toggle-btn-box-shadow) !important;
+        background-color: var(--#{$prefix}app-sidebar-base-toggle-btn-bg-color) !important;
         border: 1px solid var(--#{$prefix}app-sidebar-base-border-color) !important;
 
         .active i {
             transform: rotateZ(0deg) !important;
-        }        
+        }
     }
 
     [dir="rtl"] {
@@ -25,30 +25,30 @@
             }
         }
     }
-        
+
     .app-sidebar-logo {
-        height: calc(var(--#{$prefix}app-header-height) + 1px); 
+        height: 94px; // calc(var(--#{$prefix}app-header-height) + 1px);
         display: flex;
         align-items: center;
-        justify-content: space-between;        
+        justify-content: space-between;
         position: relative;
         flex-shrink: 0;
     }
-        
+
     .app-sidebar-menu {
         .menu  {
             // Root
             > .menu-item {
-                margin-left: 0.115rem;  
+                margin-left: 0.115rem;
 
                 > .menu-link {
                     > .menu-title {
                         font-weight: $font-weight-bold;
                         font-size: 1.1rem;
                     }
-                }    
+                }
             }
-        }    
+        }
     }
 }
 
